tests/baselines/reference/parserInterfaceDeclaration4.errors.txt
==== tests/cases/compiler/parserInterfaceDeclaration4.ts (1 errors) ====
    static interface I {
    ~~~~~~
!!! parserInterfaceDeclaration4.ts(1,1): error TS1044: 'static' modifier cannot appear on a module element.
    }